src/state/snapshots/protols__state__definition__test__workspace_test_definition_identifiers.snap
---
source: src/state/definition.rs
expression: "state.resolve_identifier_locations(\"com.workspace\", \"Author\")"
---
- uri: "file://input/b.proto"
  range:
    start:
      line: 5
      character: 8
    end:
      line: 5
      character: 14
