src/state/snapshots/protols__state__definition__test__workspace_test_definition_service_rpc_field-3.snap
---
source: src/state/definition.rs
expression: "state.definition(&ipath, \"com.workspace\",\nJumpable::Identifier(\"GetBookResponse.title\".to_owned()))"
---
- uri: "file://input/messages.proto"
  range:
    start:
      line: 6
      character: 11
    end:
      line: 6
      character: 16
