src/state/snapshots/protols__state__definition__test__workspace_test_definition_service_rpc_field-4.snap
---
source: src/state/definition.rs
expression: "state.definition(&ipath, \"com.workspace\",\nJumpable::Identifier(\".com.workspace.GetBookRequest\".to_owned()))"
---
- uri: "file://input/messages.proto"
  range:
    start:
      line: 4
      character: 8
    end:
      line: 4
      character: 22
