src/state/snapshots/protols__state__definition__test__workspace_test_definition_service_rpc_field.snap
---
source: src/state/definition.rs
expression: "state.definition(&ipath, \"com.workspace\",\nJumpable::Identifier(\"Library\".to_owned()))"
---
- uri: "file://input/service.proto"
  range:
    start:
      line: 6
      character: 8
    end:
      line: 6
      character: 15
